integrate lack-generated code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,5 @@ set(BOARD rpi_pico)
 find_package(Zephyr)
 project(lack_brake_lights)
 
-target_sources(app PRIVATE src/main.c)
+target_sources(app PRIVATE src/main.c src/lackc/brake_lights.c)
+target_include_directories(app PRIVATE rts/c)
