increase i2c speed, use timer

--- a/prj.conf
+++ b/prj.conf
@@ -1,6 +1,5 @@
 CONFIG_I2C=y
-# Maybe: ?
-# CONFIG_I2C_DW_CLOCK_SPEED=400
+CONFIG_I2C_DW_CLOCK_SPEED=400
 
 CONFIG_SENSOR=y
 CONFIG_MPU6050_TRIGGER_NONE=y
